2007-09-24  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: fix for non-standard FEAT reply.

2007-09-21  Alexander V. Lukyanov <lav@yars.free.net>

	* module.cc: use xstring; (access_so) new function.

2007-09-20  Alexander V. Lukyanov <lav@yars.free.net>

	* LocalAccess.cc, LocalAccess.h: let other tasks run while doing
	  ListInfo; better status messages.
	* NetAccess.cc: optimize translations; use xstring::format.
	* FileSet.h: (count, curr_index, curr_pct) new methods.

2007-09-17  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: skip leading space in STAT reply.
	* resource.cc: add another server overload message.
	* MirrorJob.cc, MirrorJob.h: (depth-first, no-empty-dirs, ascii)
	  new options.
	* CmdExec.cc, CmdExec.h, complete.cc: (CmdByIndex) return cmd name.

2007-09-12  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: improve STAT reply handling.
	* ArgV.cc, ArgV.h: (getopt_error_message) new method.
	* commands.cc: use getopt_error_message; don't pass longopt - unneeded;
	  (cls) remove options after time_style is used.

2007-09-12  Lamer <lamer@vnsecurity.net>

	* lftp_ssl.cc, resource.cc: (ssl:check-hostname) new setting.

2007-09-10  Alexander V. Lukyanov <lav@yars.free.net>

	* ArgV.cc: use strtok instead of tokenize.
	* misc.cc, misc.h: drop tokenize.
	* CmdExec.cc, CmdExec.h, commands.cc: use xarray for dyn_cmd_table.
	* ColumnOutput.cc, ColumnOutput.h: use RefArray for datum.
	* FileAccess.cc, FileAccess.h: outline DirList ctor and dtor.
	* FileCopy.cc, FileCopy.h, FileGlob.cc, FileGlob.h, FileSet.cc,
	  FileSet.h: outline ctor/dtor.
	* FindJob.cc, FindJob.h: use RefArray for stack.
	* FindJobDu.cc, FindJobDu.h: use RefArray for size_stack; use Ref.
	* xarray.cc, xarray.h: (xqueue) new class; (xarray::chop,last,qsort,
	  move_here) new methods; (xarray_s) new class.
	* xstring.h, Ref.h: (_clear,_set,unset) new methods.
	* Fish.cc: use xqueue for RespQueue.
	* HttpDirXML.cc: use Refs, use xarray_s for stack.